--- a/style.css
+++ b/style.css
@@ -1,10 +1,33 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   font-family: sans-serif;
   font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background: lightgreen;
+}
+
+.display {
+  width: 400px;
+  height: 300px;
+  background: lightpink;
+  border-radius: 40px;
+  margin: 20px;
+  font-size: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+button {
+  font-size: 24px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  background: green;
+  color: white;
+  cursor: pointer;
 }
